Bug 569023 IME composition is committed unexpectedly when the focused window is hanging up on Vista and later r=jmathies, a=joe